# wasm-website

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  index.html  nginx.conf
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: backend.rs  fps.rs  main.rs  utils.rs
src/models/: app.rs  item.rs  mod.rs  status.rs  topic.rs
